latest commit for the crypto app

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -33,7 +33,7 @@
                     </ul>
 
                     <a class='text-[16px]  w-full h-[45px] mt-5 flex justify-center items-center bg-transparent text-black border border-black hover:bg-black hover:text-white duration-300 transition-all'
-                        href="/login">Get Started</a>
+                        href="{% url 'login' %}">Get Started</a>
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
 
             
             <a class='text-[16px]  w-[135px] h-[45px] flex justify-center items-center bg-transparent text-black border border-black hover:bg-black hover:text-white duration-300 transition-all'
-                href="/login">Get Started</a>
+                href="{% url 'login' %}">Get Started</a>
         </div>
     </nav>
 </div>
