--- a/static/src/output.css
+++ b/static/src/output.css
@@ -989,18 +989,6 @@ input[type="range"]::-ms-fill-lower {
   top: 10rem;
 }
 
-.top-1 {
-  top: 0.25rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[0\.2rem\] {
-  top: 0.2rem;
-}
-
 .-z-\[1\] {
   z-index: -1;
 }
@@ -1135,22 +1123,6 @@ input[type="range"]::-ms-fill-lower {
   margin-top: 3rem;
 }
 
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-\[25\] {
-  margin-left: 25;
-}
-
-.ml-\[25\%\] {
-  margin-left: 25%;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
 .block {
   display: block;
 }
@@ -1203,58 +1175,6 @@ input[type="range"]::-ms-fill-lower {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
-.h-\[50\] {
-  height: 50;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[98px\] {
-  height: 98px;
-}
-
-.h-\[28\] {
-  height: 28;
-}
-
-.h-\[28px\] {
-  height: 28px;
-}
-
-.h-\[7\.72px\] {
-  height: 7.72px;
-}
-
-.h-\[59px\] {
-  height: 59px;
-}
-
-.h-\[19\.\] {
-  height: 19.;
-}
-
-.h-\[19\.64px\] {
-  height: 19.64px;
-}
-
-.h-\[45\] {
-  height: 45;
-}
-
 .max-h-0 {
   max-height: 0px;
 }
@@ -1269,14 +1189,6 @@ input[type="range"]::-ms-fill-lower {
 
 .min-h-screen {
   min-height: 100vh;
-}
-
-.min-h-\[\] {
-  min-height: ;
-}
-
-.min-h-\[200vh\] {
-  min-height: 200vh;
 }
 
 .w-11\/12 {
@@ -1330,50 +1242,6 @@ input[type="range"]::-ms-fill-lower {
 
 .w-full {
   width: 100%;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-2\/4 {
-  width: 50%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-\[25\.1px\] {
-  width: 25.1px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[7\.72px\] {
-  width: 7.72px;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-\[4\.53px\] {
-  width: 4.53px;
 }
 
 .max-w-\[23rem\] {
@@ -1588,22 +1456,6 @@ input[type="range"]::-ms-fill-lower {
   border-radius: 0.125rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-l-3xl {
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
@@ -1635,20 +1487,8 @@ input[type="range"]::-ms-fill-lower {
   border-width: 0.2px;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
 .border-none {
   border-style: none;
-}
-
-.\!border-none {
-  border-style: none !important;
 }
 
 .border-\[rgba\(19\2c 17\2c 26\2c \.1\)\] {
@@ -1663,24 +1503,6 @@ input[type="range"]::-ms-fill-lower {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-\[\] {
-  border-color: ;
-}
-
-.border-\[C4CACD\] {
-  border-color: C4CACD;
-}
-
-.border-\[\#C4CACD\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(196 202 205 / var(--tw-border-opacity));
-}
-
-.border-\[\#DA7C7C\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(218 124 124 / var(--tw-border-opacity));
 }
 
 .border-b-white {
@@ -1759,49 +1581,6 @@ input[type="range"]::-ms-fill-lower {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 66 159 / var(--tw-bg-opacity));
-}
-
-.bg-green-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(5 46 22 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-\[FF5959\] {
-  background-color: FF5959;
-}
-
-.bg-\[\#FF5959\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 89 89 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#F2F8FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 248 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F0A0A0\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 160 160 / var(--tw-bg-opacity));
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1829,18 +1608,6 @@ input[type="range"]::-ms-fill-lower {
 
 .p-\[39px\] {
   padding: 39px;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-10 {
@@ -1963,10 +1730,6 @@ input[type="range"]::-ms-fill-lower {
   text-align: center;
 }
 
-.font-\[\] {
-  font-family: ;
-}
-
 .text-\[14px\] {
   font-size: 14px;
 }
@@ -2024,19 +1787,6 @@ input[type="range"]::-ms-fill-lower {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-\[13px\] {
-  font-size: 13px;
-}
-
-.text-\[11px\] {
-  font-size: 11px;
 }
 
 .font-\[400\] {
@@ -2148,8 +1898,9 @@ input[type="range"]::-ms-fill-lower {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2167,31 +1918,6 @@ input[type="range"]::-ms-fill-lower {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.\!outline-none {
-  outline: 2px solid transparent !important;
-  outline-offset: 2px !important;
-}
-
-.outline {
-  outline-style: solid;
-}
-
-.outline-0 {
-  outline-width: 0px;
-}
-
-.\!outline-0 {
-  outline-width: 0px !important;
-}
-
-.outline-transparent {
-  outline-color: transparent;
-}
-
-.\!outline-transparent {
-  outline-color: transparent !important;
 }
 
 .transition-all {
@@ -2348,32 +2074,6 @@ input[type="range"]::-ms-fill-lower {
   box-shadow: 0 4px 60px rgba(0,0,0,.06);
 }
 
-.placeholder\:font-light::-moz-placeholder {
-  font-weight: 300;
-}
-
-.placeholder\:font-light::placeholder {
-  font-weight: 300;
-}
-
-.placeholder\:text-\[\#C4CACD\]::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(196 202 205 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-\[\#C4CACD\]::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(196 202 205 / var(--tw-text-opacity));
-}
-
-.focus-within\:outline-0:focus-within {
-  outline-width: 0px;
-}
-
-.focus-within\:\!outline-0:focus-within {
-  outline-width: 0px !important;
-}
-
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -2433,23 +2133,6 @@ input[type="range"]::-ms-fill-lower {
   opacity: 1;
 }
 
-.focus\:\!border-none:focus {
-  border-style: none !important;
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:outline-0:focus {
-  outline-width: 0px;
-}
-
-.focus\:\!outline-0:focus {
-  outline-width: 0px !important;
-}
-
 .disabled\:cursor-not-allowed:disabled {
   cursor: not-allowed;
 }
@@ -2474,10 +2157,6 @@ input[type="range"]::-ms-fill-lower {
 
   .sm\:mr-\[20px\] {
     margin-right: 20px;
-  }
-
-  .sm\:w-2\/4 {
-    width: 50%;
   }
 
   .sm\:grid-cols-2 {
@@ -2514,10 +2193,6 @@ input[type="range"]::-ms-fill-lower {
 }
 
 @media (min-width: 768px) {
-  .md\:fixed {
-    position: fixed;
-  }
-
   .md\:-right-\[15rem\] {
     right: -15rem;
   }
@@ -2564,10 +2239,6 @@ input[type="range"]::-ms-fill-lower {
     margin-top: 0px;
   }
 
-  .md\:ml-\[25\%\] {
-    margin-left: 25%;
-  }
-
   .md\:block {
     display: block;
   }
@@ -2594,14 +2265,6 @@ input[type="range"]::-ms-fill-lower {
 
   .md\:w-full {
     width: 100%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
   }
 
   .md\:max-w-\[30rem\] {
