changed the runtime to python3.9

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,6 +12,7 @@
     {% endblock title %}
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
+    <!-- Compress here -->
     <link rel="stylesheet" href="{% static 'src/output.css' %}">
     
 
