check if crypto works again for the last time

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -12,8 +12,9 @@
     {% endblock title %}
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     
-    <!-- Compress here -->
+    {% compress css %}
     <link rel="stylesheet" href="{% static 'src/output.css' %}">
+    {% endcompress %}
     
 
 </head>
